[package]
name = "robocore_native"
version = "1.0.0"
edition = "2021"
authors = ["RoboCore Team"]
description = "RoboCore Performance Engine - Rust backend for Minecraft optimization"
license = "MIT"

[lib]
name = "robocore_native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# JNI bindings for Java interop
jni = "0.21"

# High-performance compression
zstd = "0.13"

# Noise generation for terrain
noise = "0.9"

# Fast random number generation
rand = "0.8"
rand_xoshiro = "0.6"

# Concurrency
rayon = "1.8"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
log = "0.4"
env_logger = "0.11"

# System monitoring
sysinfo = "0.30"

# Memory management
bumpalo = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
